# p2p-cli

./: Cargo.toml  LICENSE  README.es.md  README.md
src/: camera.rs  chat.rs  display.rs  main.rs
