[package]
name = "p2p-video-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
data-encoding = "2.9.0"
dirs = "5.0"
futures-lite = "2.6.1"
iroh = "0.91.1"
iroh-gossip = "0.91.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = "1.47.1"
nokhwa = { version = "0.10.9", features = ["input-v4l", "input-msmf", "input-avfoundation", "input-jscam"] }
terminal_size = "0.3"
n0-snafu = "0.2.1"
postcard = "1.1.3"
base64 = "0.22.1"
bincode = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_Foundation", "Win32_Media_MediaFoundation", "Win32_System_Threading"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1